feat: sync local host compatibility features
